--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:id="@+id/main_activity">
+
 
     <TextView
         android:text="@string/label_name"
@@ -22,9 +24,9 @@
         android:layout_below="@+id/label_name"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/pay_button"
-        android:layout_alignEnd="@+id/pay_button"
-        android:text="@string/default_name" />
+        android:text="@string/default_name"
+        android:layout_alignRight="@+id/cost"
+        android:layout_alignEnd="@+id/cost" />
 
     <TextView android:text="@string/label_cost" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -38,7 +40,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="number"
-        android:ems="10"
         android:id="@+id/cost"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/label_cost"
@@ -48,57 +49,41 @@
         android:text="@string/default_cost" />
 
     <TextView
-        android:text="@string/label_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/label_phone"
-        android:layout_marginTop="25dp"
-        android:layout_below="@+id/cost"
+        android:text="@string/label_payment_type"
+        android:id="@+id/textView4"
+        android:layout_above="@+id/linearLayout"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <EditText
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        android:id="@+id/phone"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/label_phone"
-        android:layout_alignParentLeft="true"
-        android:layout_alignRight="@+id/cost"
-        android:layout_alignEnd="@+id/cost"
-        android:selectAllOnFocus="false" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/label_status"
-        android:id="@+id/label_status"
-        android:layout_alignTop="@+id/status"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:text="@string/default_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/status"
-        android:layout_marginBottom="24dp"
-        android:layout_marginLeft="4dp"
-        android:layout_above="@+id/pay_button"
-        android:layout_toRightOf="@+id/label_status"
-        android:layout_toEndOf="@+id/label_status" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/pay_button"
-        android:id="@+id/pay_button"
-        android:onClick="onClick"
+        android:baselineAligned="false"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/linearLayout">
 
-        android:layout_alignParentStart="true" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/label_payment_type_mc"
+            android:id="@+id/button_mc"
+            android:onClick="onClickMc"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0.66" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/label_payment_type_card"
+            android:onClick="onClickCard"
+            android:id="@+id/button_card"
+            android:layout_weight="0.66" />
+    </LinearLayout>
+
 
 </RelativeLayout>
